--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="/assets/reset.css" />
     <link rel="stylesheet" href="/assets/index.css" />
     <link rel="stylesheet" href="/assets/header.css" />
+    <link rel="stylesheet" href="/assets/calendario.css">
     <title>Agenda</title>
   </head>
   <body>
