Corretto caricamento della pagina, reveisone css

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/assets/reset.css" />
     <link rel="stylesheet" href="/assets/index.css" />
-    <link rel="stylesheet" href="/assets/header.css" />
-    <link rel="stylesheet" href="/assets/calendario.css">
+    <link rel="stylesheet" href="/header/header.css" />
+    <link rel="stylesheet" href="/calendario/calendario.css">
     <title>Agenda</title>
   </head>
   <body>
@@ -45,6 +45,6 @@
         <div id="task-container"></div>
       </section>
     </main>
-    <script src="/scripts/index.js"></script>
+    <script type="module" src="/scripts/index.js"></script>
   </body>
 </html>
