--- a/login.html
+++ b/login.html
@@ -21,7 +21,8 @@
                 <input id="password-input" type="password" />
                 <div id="btn-container">
                   <button id="login-btn" class="btn">Login</button>
-                </div>
+                </div> 
+                <a id="signin-link" href="#">Sign in</a>
         </form>
     </div>
     </section>
